--- a/explorebs.html
+++ b/explorebs.html
@@ -168,7 +168,7 @@
                     <div class="col-lg-8 col-xl-6 text-center">
                         <h2 class="mt-0">Let's Get In Touch!</h2>
                         <hr class="divider" />
-                        <a class="btn btn-dark" href="https://linktr.ee/suambelku" target= "_blank"button style="border-radius: 4px;"> Contact me</a>
+                        <a class="btn btn-dark" href="https://linktr.ee/weedgix" target= "_blank"button style="border-radius: 4px;"> Contact me</a>
                        
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
