--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="explorebs.html" id="explore">Explore </a>
             </div>
             <div class="connect">  
-            <a href="https://linktr.ee/suambelku" id="connect" target="_blank"> Connect With me <span> &#x2192; </span></a>
+            <a href="https://linktr.ee/weedgix" id="connect" target="_blank"> Connect With me <span> &#x2192; </span></a>
             </div>
         </div>
     </div>
