--- a/explorebs.html
+++ b/explorebs.html
@@ -33,8 +33,9 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text" style="letter-spacing: 10px; margin-top:190px; font-weight:700; font-size: 90px; color: transparent;
-                        -webkit-text-stroke: 1px #fff; -webkit-background-clip: text;">WIDIAN</h1>
+                        <h1 class="text text-responsive" style="letter-spacing: 13px; margin-top: 140px; font-weight: 700; color: transparent;
+                        -webkit-text-stroke: 1px #fff; -webkit-background-clip: text; padding: 0 20px;">WIDIAN</h1>
+
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <a class="btn btn-dark" href="#about" style="border-radius: 4px; padding: 8px 17px 8px 17px; font-size: 15px; margin-top:120px;">Explore</a>
@@ -125,8 +126,11 @@
           </div>
 
         <!-- Portfolio-->
-        <div id="portfolio" style="margin-top: 80px;">
+        <div id="portfolio" style="margin-top: 30px;">
             <h2 class="text-center mt-0">Portfolio</h2>
+            <p class="text-center" style="padding: 35px 20px 35px 20px;"> Here are few of my projects that i've been working on.
+                Slide the screen to see my projects.
+            </p>
             <hr class="divider" />    
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
@@ -168,10 +172,12 @@
                     <div class="col-lg-8 col-xl-6 text-center">
                         <h2 class="mt-0">Let's Get In Touch!</h2>
                         <hr class="divider" />
-                        <a class="btn btn-dark" href="https://linktr.ee/weedgix" target= "_blank"button style="border-radius: 4px;"> Contact me</a>
+                        <a class="btn btn-dark" href="https://linktr.ee/suambelku" target= "_blank"button style="border-radius: 4px;"> Contact me</a>
                        
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
 
     </body>
 </html>
